Profile view without update and no calendar view in schedule view.

--- a/TheOneDoctor/Controllers/HomeVC/ProfileVC/DoctorSpecialityCell/DoctorSpecialityCollectionViewCell.xib
+++ b/TheOneDoctor/Controllers/HomeVC/ProfileVC/DoctorSpecialityCell/DoctorSpecialityCollectionViewCell.xib
@@ -33,7 +33,7 @@
                                     <color key="titleColor" name="AppDarkGray"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anesthiology Anesthiology" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bE-T3-Cdk">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bE-T3-Cdk">
                                 <rect key="frame" x="8" y="0.0" width="137" height="45"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="highlightedColor"/>
